--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node --env-file=.env dist/index.js",
     "lint": "npx eslint ./src/**",
-    "lint:fix": "npx eslint ./src/** --fix"
+    "lint:fix": "npx eslint ./src/** --fix",
+    "test": "node --import tsx --test src/**/*.test.ts"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,5 @@
     "openai": "^5.8.2",
     "p-limit": "^6.2.0",
     "zod": "^3.25.67"
-  },
-  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
+  }
 }
